--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -48,7 +48,7 @@
               <li><a href="#contato" class="nav-link">Contato</a></li>
             </ul>
             <div class="nav-buttons">
-              <a href="#login" class="btn-login">
+              <a href="<%= g_admin_index_path %>" class="btn-login">
                 <i class="fas fa-user me-2"></i>Login
               </a>
               <a href="#apoie" class="btn-primary">
